# itmo2019-haskell-project

./: README.md  battlefield.cabal
.stack-work/ghci/0f891d0d/: cabal_macros.h
.stack-work/ghci/2f34d42e/: cabal_macros.h
.stack-work/ghci/302e1028/: cabal_macros.h
.stack-work/ghci/3ffbb011/: cabal_macros.h
.stack-work/ghci/406557e2/: cabal_macros.h
.stack-work/ghci/42ef1fe0/: cabal_macros.h
.stack-work/ghci/5bbdd2cc/: cabal_macros.h
.stack-work/ghci/61c26ff4/: cabal_macros.h
.stack-work/ghci/77c9ccef/: cabal_macros.h
.stack-work/ghci/98df6ebf/: cabal_macros.h
.stack-work/ghci/997cea82/: cabal_macros.h
.stack-work/ghci/9ada7dd5/: cabal_macros.h
.stack-work/ghci/de929ed7/: cabal_macros.h
.stack-work/ghci/e91f22f5/: cabal_macros.h
.stack-work/ghci/ec772e9f/: cabal_macros.h
.stack-work/ghci/f79bc378/: cabal_macros.h
.stack-work/install/x86_64-osx/lts-14.6/8.6.5/flag-cache/: GLURaw-2.0.0.4-FoqDy5RZDbcFlrqUYGvoHv  GLUT-2.7.0.15-Jdd60KxcIGULikOoBk4c3j  MonadRandom-0.5.1.1-BXQxbJnDg3pEQOynFuMqCN  ObjectName-1.1.0.1-CDTV8Pj4rLtHGU6QO0tv1T  OpenGL-3.0.3.0-E5e3HNwzTDn4UpRgzpJpb7  OpenGLRaw-3.3.3.0-4ecFCfuqZcIIJFDLuc8c7p  QuickCheck-2.13.2-ELw76TsVduo6OXHYodvTIH  StateVar-1.2-OvQScUJdslB4HgRfOXUfu  ansi-terminal-0.9.1-KAtSkkD7GHFKoP9eT8kWXE  ansi-wl-pprint-0.6.9-Cz5pneQ8Hse3VAFYZHVfdH  async-2.2.2-izpvdmZWvvDzxTFdUgkXg  basement-0.0.11-C095fEhcIb5E8Z5F95kg3I  battlefield-0.1.0.0-8CmZqnTevv4DQlKkYwSBkE  bmp-1.2.6.3-5I0Urr4KLkm5qE2wNumCpo  call-stack-0.1.0-J1eWgTNOnM4IGVyeW0v2YZ  case-insensitive-1.2.0.11-GGYU9CY9cs88wywgwHVKC6  cereal-0.5.8.1-2v8l8XjvcW5E2rmy0u7N7  clock-0.8-KQdRNfSnPL2Kq3p84TuxcV  colour-2.3.5-y0xjV3ONUd40VuBtReEvC  exceptions-0.10.3-HxcogURuow4vEVQcMjJ2k  fixed-0.3-DiINgdv3jW2LmDO7zcODC4  gloss-1.13.0.1-3miQnD4GisQ8ZHTAPt5x1c  gloss-rendering-1.13.1.1-3Y1dpOroq3J61bUWolMSTd  half-0.3-Ev8Lz3j60xACodwSKk6ogk  hashable-1.2.7.0-CWI8VZuQTAYWIQTQQtqCV  hw3-0.1.0.0-83r239n2GbFIyVIthhyr0Y  integer-logarithms-1.0.3-L1fXvdNnENnEcLpMml0rI7  megaparsec-7.0.5-KsE7yKyKzP7AXPLp6NyGnD  network-2.8.0.1-Hmt657UE3v349uYmvUXEvW  network-bsd-2.8.0.0-dhH6BzRfiq3GBPUbfkNPu  network-simple-0.4.5-4zm5v2SE1lO19VqG0Q1XJc  optparse-applicative-0.14.3.0-GK49BTAfesRFoute4BNmFE  parser-combinators-1.1.0-38c2Lee1g7D9AI3U94rozi  primitive-0.6.4.0-ILgywxtLpvnAOlEISPpP5b  random-1.1-3ypV4EIycgb35PKjTYYr5q  random-shuffle-0.0.4-DFIfnU2g7FMDj7c4JqpKc8  safe-exceptions-0.1.7.0-6Z6p4F73eNjCQxPwnzKYtn  scientific-0.3.6.2-Jh87LYpjAZH3EhMJkXeu1S  socks-0.6.0-BxvMxm1eqdsG1MVqfsa7vH  splitmix-0.0.3-BieKXhsPr5JADQFNGU6dLm  (+9 more)
.stack-work/install/x86_64-osx/lts-14.6/8.6.5/lib/x86_64-osx-ghc-8.6.5/: libHSbattlefield-0.1.0.0-5FxjAk3MfUxBwzZHxsAwJJ-ghc8.6.5.dylib
.stack-work/install/x86_64-osx/lts-14.6/8.6.5/lib/x86_64-osx-ghc-8.6.5/battlefield-0.1.0.0-5FxjAk3MfUxBwzZHxsAwJJ/: ByteStringParser.dyn_hi  ByteStringParser.hi  FieldModifications.dyn_hi  FieldModifications.hi  Types.dyn_hi  Types.hi
.stack-work/install/x86_64-osx/lts-14.6/8.6.5/lib/x86_64-osx-ghc-8.6.5/battlefield-0.1.0.0-8CmZqnTevv4DQlKkYwSBkE/: ByteStringParser.dyn_hi
.stack-work/install/x86_64-osx/lts-14.6/8.6.5/lib/x86_64-osx-ghc-8.6.5/hw3-0.1.0.0-83r239n2GbFIyVIthhyr0Y/: BashParser.hi
.stack-work/install/x86_64-osx/lts-14.6/8.6.5/pkgdb/: battlefield-0.1.0.0-5FxjAk3MfUxBwzZHxsAwJJ.conf  battlefield-0.1.0.0-8CmZqnTevv4DQlKkYwSBkE.conf  hw3-0.1.0.0-83r239n2GbFIyVIthhyr0Y.conf  package.cache
client/: Client.hs  GameEvents.hs  Graphics.hs  Main.hs
server/: Main.hs  Server.hs
src/: ByteStringParser.hs  Client.hs  FieldModifications.hs  GameEvents.hs  Graphics.hs  Server.hs  Types.hs
test/: FieldModificationTests.hs  Main.hs  WinnerChecksTests.hs
