name:                battlefield
version:             0.1.0.0
synopsis:            Synopsis for battlefield game
description:         Project FP ITMO course

homepage:            https://github.com//itmo2019-haskell-project/tree/master/#readme
license:             MIT
license-file:        LICENSE
author:              Alexandra Polozenko
maintainer:          example@example.com
copyright:           2019 Alexandra Polozenko

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Main Types Server Client ByteStringParser FieldModifications Graphics GameEvents
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

executable mini-shell
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                       , battlefield
                       , network
                       , bytestring
                       , random-shuffle
                       , random
                       , binary
                       , word8
                       , gloss
                       , mtl
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                       , battlefield
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
