name:                battlefield
version:             0.1.0.0
synopsis:            Synopsis for battlefield game
description:         Project FP ITMO course

homepage:            https://github.com//itmo2019-haskell-project/tree/master/#readme
license:             MIT
license-file:        LICENSE
author:              Alexandra Polozenko
maintainer:          example@example.com
copyright:           2019 Alexandra Polozenko

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Types ByteStringParser FieldModifications
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                      , bytestring
                      , random-shuffle
                      , random
                      , network
                      , binary
                      , word8
  default-language:    Haskell2010

executable server
  hs-source-dirs:      server
  main-is:             Main.hs
  other-modules:       Server
  ghc-options:         -Wall -Werror
  build-depends:       base
                       , battlefield
                       , network
                       , random-shuffle
                       , random
                       , mtl
  default-language:    Haskell2010

executable client
  hs-source-dirs:      client
  main-is:             Main.hs
  other-modules:       Client Graphics GameEvents
  ghc-options:         -Wall -Werror -fno-ghci-sandbox
  build-depends:       base
                       , battlefield
                       , network
                       , binary
                       , gloss
                       , mtl
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                       , battlefield
  ghc-options:         -Wall -Werror -with-rtsopts=-N -fno-ghci-sandbox
  default-language:    Haskell2010
